fixing 1px element shift when grid is toggled
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/themes/upfront@13627 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -8738,7 +8738,8 @@ a.upfront-css-edit:before{
 
 /* Fix for the 1px element movement glitch */
 
-.upfront-region-container-slider {
+.upfront-region-container-slider,
+.upfront-overlay-grid {
 	-webkit-backface-visibility: hidden;
 }
 
